--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -16,4 +16,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: echo "Build started "
+      - run: echo "Build started "
+      uses: actions/checkout@v3
+      - run: echo "Project repository has been clonded to runner(ubuntu)"
+
+      #Login to Docker Hub
+      - name: Login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - run: echo "Logged into Docker Hub "
