--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -17,10 +17,11 @@ jobs:
 
     steps:
       - run: echo "Build started "
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - run: echo "Project repository has been clonded to runner(ubuntu)"
+      - run: echo "Project repository has been clonde to runnner(ubuntu)"
 
-      #Login to Docker Hub
+    #Login to docker hub
       - name: Login to docker hub
         uses: docker/login-action@v2
         with:
