--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -50,7 +50,7 @@ jobs:
     steps:
       - run: echo "Deplyment started"
 
-    #Checkout application to deploy
+      #Checkout application to deploy
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -59,4 +59,12 @@ jobs:
         uses: "google-github-actions/auth@v0"
         with:
           credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+      
+       # Setup gcloud CLI
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
+
+      # Get the GKE credentials so we can deploy to the cluster
+      - run: |-
+          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
