--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{env.DEPLOYMENT_NAME}}:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{env.DEPLOYMENT_NAME}}:latest
   
   deploy:
     needs: setup-build-publish
@@ -72,7 +72,6 @@ jobs:
       - name: Deploy
         run: |-
           kubectl apply -f ./k8s/deployment.yaml -f ./k8s/service.yaml
-          kubectl set image deployment/$DEPLOYMENT_NAME ctse-supplier-orders=maryamyumna/supplier-order:${{ github.sha }}
           kubectl rollout status deployment/$DEPLOYMENT_NAME
           kubectl get services -o wide
 
